--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 aiodns==3.1.1
 aiohttp==3.8.2
 aiosignal==1.3.1
-alpaca-py==0.14.0
+alpaca-py
 alpaca-trade-api==3.1.1
 alpha-vantage==2.3.1
 annotated-types==0.6.0
