--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,18 @@
-alpaca-trade-api
-lumibot
-python-dotenv
+torch>=2.0.0
+torchvision
+torchaudio
+transformers>=4.30.0
+lumibot>=3.0.0
+alpaca-py>=0.8.0  # New Alpaca SDK
 timedelta
-torch
-transformers
+pandas>=2.0.0
+numpy>=1.24.3,<2.0.0  # Pin to 1.x to avoid compatibility issues
+tqdm
+python-dotenv>=1.0.0
+ta-lib
 yfinance
+websockets>=11.0  # Updated websockets
+aiohttp>=3.8.0
+asyncio>=3.4.3
+numexpr>=2.8.4
+bottleneck>=1.3.6
