feat(ops): add SLO monitoring and shadow drift alerting

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,28 @@ PAPER=True
 # SMTP_USER=your_email@gmail.com
 # SMTP_PASSWORD=your_app_password
 # EMAIL_TO=recipient@example.com
+
+# =============================================================================
+# OPERATIONAL SLO PAGING (optional, for critical runtime breaches)
+# =============================================================================
+
+# Enable webhook paging for SLO breaches emitted by SLOMonitor.
+# SLO_PAGING_ENABLED=false
+
+# Webhook endpoint for pager/incident system (Slack/PagerDuty relay/etc.).
+# SLO_PAGING_WEBHOOK_URL=https://example.com/incident-webhook
+
+# Minimum severity to page: warning | critical
+# SLO_PAGING_MIN_SEVERITY=critical
+
+# HTTP timeout in seconds for alert delivery attempts (1-30).
+# SLO_PAGING_TIMEOUT_SECONDS=3
+
+# Incident acknowledgment SLA for critical incidents (minutes).
+# INCIDENT_ACK_SLA_MINUTES=15
+
+# Shadow drift warning threshold (decimal, e.g. 0.12 = 12%).
+# PAPER_LIVE_SHADOW_DRIFT_WARNING=0.12
+
+# Strict research promotion threshold for paper/live shadow drift (decimal).
+# PAPER_LIVE_SHADOW_DRIFT_MAX=0.15
