--- a/pytest.ini
+++ b/pytest.ini
@@ -38,6 +38,16 @@ addopts =
     # Warnings
     -W ignore::DeprecationWarning
     -W ignore::PendingDeprecationWarning
+    -W error::FutureWarning:engine.backtest_engine
+    -W error::RuntimeWarning:strategies.risk_manager
+    -W error::RuntimeWarning:strategies.bracket_momentum_strategy
+    -W error::RuntimeWarning:strategies.ensemble_strategy
+    -W error::RuntimeWarning:strategies.factor_models
+    -W error::RuntimeWarning:brokers.backtest_broker
+    -W error::RuntimeWarning:engine.factor_attribution
+    -W error::RuntimeWarning:utils.market_impact
+    -W error::FutureWarning:utils.factor_data
+    -W error::pytest.PytestReturnNotNoneWarning
 
     # Output
     --tb=short
@@ -59,6 +69,8 @@ markers =
 
 # Asyncio configuration
 asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
+asyncio_default_test_loop_scope = function
 
 # Parallel execution (install pytest-xdist)
 # Run with: pytest -n auto
